@@ -1,12 +1,15 @@
-package com.yandex.app.managers;
+package managers;
 
+import com.yandex.app.managers.HistoryManager;
 import com.yandex.app.model.Task;
 import com.yandex.app.utils.Managers;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+
 
 import static com.yandex.app.model.TaskStatus.DONE;
 import static com.yandex.app.model.TaskStatus.NEW;
-import static org.junit.jupiter.api.Assertions.*;
+
 
 class HistoryManagerTest {
 
@@ -14,18 +17,18 @@ class HistoryManagerTest {
 
     @Test
     void shouldPreserveTaskDataInHistory() {
-        Task original = new Task(1, "Original", "Desc", NEW);
+        Task original = new Task("Original", "Desc", NEW);
         history.add(original);
 
 
         original.setTitle("Modified");
         original.setStatus(DONE);
 
-        Task fromHistory = history.getHistory().get(0);
+        Task fromHistory = history.getHistory().getFirst();
 
 
-        assertEquals("Original", fromHistory.getTitle());
-        assertEquals(NEW, fromHistory.getStatus());
+        Assertions.assertEquals("Original", fromHistory.getTitle());
+        Assertions.assertEquals(NEW, fromHistory.getStatus());
     }
 
 }
